[gd_scene load_steps=5 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://Down Hill.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 2 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -960.0
margin_bottom = -540.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 960.0
margin_bottom = 542.0

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
margin_top = 30.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 1 )
text = "MAIN MENU"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -92.0
margin_bottom = -17.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "This game is made by a student. 
Please use it wisely as a reference or anything else on educational purpose."
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 97.0
margin_top = 204.0
margin_right = 865.0
margin_bottom = 296.0
custom_constants/separation = 10

[node name="Play" type="Button" parent="VBoxContainer"]
margin_right = 768.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
text = "Play"

[node name="SelectLevel" type="Button" parent="VBoxContainer"]
margin_top = 31.0
margin_right = 768.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "Select Level"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 768.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 93.0
margin_right = 768.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 2 )
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/SelectLevel" to="." method="_on_SelectLevel_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
